asteria/core/tests/errors/elaboration_errors/cannot_check_lambda_term_against_non_function_type.asteriacore
x : forall {a : Type}. a
  = \x -> x
  ;;
